# Workbench

./: meson.build
src/: language-provider.vala  meson.build  re.sonny.Workbench  welcome.css  welcome.ui  workbench.gresource.xml
src/js/: code.js
